rgbds-0.6.1/test/asm/load-rom.err
error: load-rom.asm(3):
    `LOAD` blocks cannot create a ROM section
error: load-rom.asm(5):
    Found `ENDL` outside of a `LOAD` block
error: Assembly aborted (2 errors)!
