rgbds-0.6.1/test/asm/load-rom.asm
SECTION "Hello", ROM0
	ld a, 1
LOAD "Wello", ROM0
	ld a, 2
ENDL
